--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     body {
       margin: 0;
       padding: 0;
-      text-align: center;
       background-color: #000;
     }
-    img {
+    iframe {
       width: 100%;
-      height: auto;
+      height: 100vh;
+      border: none;
     }
   </style>
 </head>
 <body>
-  <img src="menu.png" alt="Menu">
+  <iframe src="menu.pdf"></iframe>
 </body>
 </html>
