--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
       padding: 0;
       background-color: #000;
     }
-    iframe {
+    embed {
       width: 100%;
       height: 100vh;
-      border: none;
     }
   </style>
 </head>
 <body>
-  <iframe src="menu.pdf"></iframe>
+  <embed src="menu.pdf" type="application/pdf">
 </body>
 </html>
